--- a/partials/dragndrop.html
+++ b/partials/dragndrop.html
@@ -1,31 +1,48 @@
-<style>
-    #div1,
-    #div2 {
-        float: left;
-        width: 240px;
-        height: 55px;
-        margin: 10px;
-        padding: 10px;
-        border: 1px solid #aaaaaa;
-    }
-</style>
-<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-    <img id="drag1" src="../assets/img_w3slogo.gif" draggable="true" ondragstart="drag(event)">
-</div>
-<div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+<!DOCTYPE html>
+<html lang="en">
 
-<script>
-    function allowDrop(ev) {
-        ev.preventDefault();
-    }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML - DragnDrop</title>
+</head>
 
-    function drag(ev) {
-        ev.dataTransfer.setData("text", ev.target.id);
-    }
+<body>
+    <h2>Drag n Drop</h2>
+    <nav>
+        <a href="/">Home</a>
+    </nav>
+    <style>
+        #div1,
+        #div2 {
+            float: left;
+            width: 240px;
+            height: 55px;
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid #aaaaaa;
+        }
+    </style>
+    <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
+        <img id="drag1" src="../assets/content.gif" draggable="true" ondragstart="drag(event)">
+    </div>
+    <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
-    function drop(ev) {
-        ev.preventDefault();
-        var data = ev.dataTransfer.getData("text");
-        ev.target.appendChild(document.getElementById(data));
-    }
-</script>
+    <script>
+        function allowDrop(ev) {
+            ev.preventDefault();
+        }
+
+        function drag(ev) {
+            ev.dataTransfer.setData("text", ev.target.id);
+        }
+
+        function drop(ev) {
+            ev.preventDefault();
+            var data = ev.dataTransfer.getData("text");
+            ev.target.appendChild(document.getElementById(data));
+        }
+    </script>
+</body>
+
+</html>
